--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -4811,6 +4811,7 @@ desktop-view=عرض مكتبي
 destination=الوجهة
 destination-address=عنوان المرسل اليه
 destination-directory=مجلّد الهدف
+destination-field=Destination Field (Automatic Copy)
 destination-name=اسم الوجهة
 destination-page=الصفحة الوجهة
 destination-page-help=تعيين عنوان URL سهل لصفحة عرض نتائج البحث (مثل. "/search").
@@ -14050,6 +14051,7 @@ source-address=عنوان المصدر
 source-code=رمز المصدر
 source-code-url=عنوان URL للرمز المصدر
 source-file=الملف المصدر
+source-file-field=Source File Field (Automatic Copy)
 source-name=اسم المصدر
 source-selection=اختيار المصدر
 source-url=الرابط التشعبي المصدري
