--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -4811,6 +4811,7 @@ desktop-view=Изглед на работния плот (Automatic Translation)
 destination=назначение (Automatic Translation)
 destination-address=Целеви адрес
 destination-directory=Целева папка
+destination-field=Destination Field (Automatic Copy)
 destination-name=Име на местоназначението (Automatic Translation)
 destination-page=Страница на местоназначението (Automatic Translation)
 destination-page-help=Задайте приятелски URL адрес на страницата за показване на резултатите от търсенето (напр. "/търсене"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Адрес на източника
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Файл източник (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Име на източник (Automatic Translation)
 source-selection=Избор на източник (Automatic Translation)
 source-url=URL на източника
