--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -4811,6 +4811,7 @@ desktop-view=Vista d'escriptori
 destination=Destinació
 destination-address=Adreça de destinació
 destination-directory=Directori de destinació
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nom de destinació
 destination-page=Pàgina de destinació
 destination-page-help=Definiu l'URL amigable de la pàgina de visualització dels resultats de la cerca (p. ex. "/cerca").
@@ -14052,6 +14053,7 @@ source-address=Adreça d'origen
 source-code=Codi font
 source-code-url=URL de codi font
 source-file=Fitxer d'origen
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nom de la font
 source-selection=Selecció de la font
 source-url=URL d'origen
