--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -4811,6 +4811,7 @@ desktop-view=Zobrazení na desktopu
 destination=cíl (Automatic Translation)
 destination-address=Cílová adresa
 destination-directory=Cílová složka
+destination-field=Destination Field (Automatic Copy)
 destination-name=Název cíle (Automatic Translation)
 destination-page=Cílová stránka (Automatic Translation)
 destination-page-help=Nastavte popisný URL stránky zobrazení výsledků vyhledávání (např. "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Adresa zdroje
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Zdrojový soubor (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Název zdroje (Automatic Translation)
 source-selection=Výběr zdroje (Automatic Translation)
 source-url=URL zdroje
