--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -4811,6 +4811,7 @@ desktop-view=Desktop View (Automatic Copy)
 destination=destination (Automatic Translation)
 destination-address=Destination Address (Automatic Copy)
 destination-directory=Destination Directory (Automatic Copy)
+destination-field=Destination Field (Automatic Copy)
 destination-name=Navn på destination (Automatic Translation)
 destination-page=Destinationsside (Automatic Translation)
 destination-page-help=Angiv den fulde URL-adresse for visningssiden for søgeresultaterne (f.eks. "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Source Address (Automatic Copy)
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Kildefil (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Kildenavn (Automatic Translation)
 source-selection=Valg af kilde (Automatic Translation)
 source-url=Source URL (Automatic Copy)
