--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -4811,6 +4811,7 @@ desktop-view=Desktopanzeige
 destination=Ziel
 destination-address=Zieladresse
 destination-directory=Zielverzeichnis
+destination-field=Destination Field (Automatic Copy)
 destination-name=Zielname
 destination-page=Zielseite
 destination-page-help=Geben Sie eine benutzerfreundliche URL der Anzeigeseite mit Suchergebnissen an (z. B. "/suche").
@@ -14052,6 +14053,7 @@ source-address=Quelladresse
 source-code=Quellcode
 source-code-url=Quellcode-URL
 source-file=Quelldatei
+source-file-field=Source File Field (Automatic Copy)
 source-name=Quellname
 source-selection=Quellenauswahl
 source-url=Quell URL
