--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -4811,6 +4811,7 @@ desktop-view=Προβολή επιφάνειας εργασίας (Automatic Tra
 destination=προορισμός (Automatic Translation)
 destination-address=Διεύθυνση προορισμού
 destination-directory=Κατάλογος προορισμού
+destination-field=Destination Field (Automatic Copy)
 destination-name=Όνομα προορισμού (Automatic Translation)
 destination-page=Σελίδα προορισμού (Automatic Translation)
 destination-page-help=Ορίστε τη φιλική διεύθυνση URL της σελίδας εμφάνισης των αποτελεσμάτων αναζήτησης (π.χ. "/αναζήτηση"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Διεύθυνση προέλευσης
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Αρχείο προέλευσης (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Όνομα προέλευσης (Automatic Translation)
 source-selection=Επιλογή προέλευσης (Automatic Translation)
 source-url=Πηγαίο URL
