--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -4811,6 +4811,7 @@ desktop-view=Töölauavaade (Automatic Translation)
 destination=Sihtkoht (Automatic Translation)
 destination-address=Sihtkoha aadress
 destination-directory=Sihtkataloog
+destination-field=Destination Field (Automatic Copy)
 destination-name=Sihtkoha nimi (Automatic Translation)
 destination-page=Sihtkoha leht (Automatic Translation)
 destination-page-help=Määrake otsingutulemite kuvamislehe sõbralik URL (nt "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Lähteaadress
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Lähtefail (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Allika nimi (Automatic Translation)
 source-selection=Allika valik (Automatic Translation)
 source-url=Allika URL
