--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -4811,6 +4811,7 @@ desktop-view=نمایش رومیزی
 destination=مقصد (Automatic Translation)
 destination-address=آدرس مقصد
 destination-directory=پوشه مقصد
+destination-field=Destination Field (Automatic Copy)
 destination-name=نام مقصد
 destination-page=صفحه مقصد
 destination-page-help=آدرس اینترنتی دوستانه صفحه نمایش نتایج جستجو (مانند "/جستجو") را تنظیم کنید. (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=آدرس منبع
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=فایل منبع (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=نام منبع (Automatic Translation)
 source-selection=انتخاب منبع (Automatic Translation)
 source-url=آدرس منبع
