--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -4811,6 +4811,7 @@ desktop-view=Työpöytänäkymä
 destination=Kohde
 destination-address=Kohdeosoite
 destination-directory=Kohdehakemisto
+destination-field=Destination Field (Automatic Copy)
 destination-name=Kohteen Nimi
 destination-page=Kohdesivu
 destination-page-help=Aseta hakutulosten näyttösivun ystävällinen URL (ts. "/haku").
@@ -14049,6 +14050,7 @@ source-address=Lähdeosoite
 source-code=Lähdekoodi
 source-code-url=Lähdekoodin URL
 source-file=Lähdetiedosto
+source-file-field=Source File Field (Automatic Copy)
 source-name=Lähteen Nimi
 source-selection=Lähteen Valinta
 source-url=Lähde URL-osoite
