--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -4811,6 +4811,7 @@ desktop-view=डेस्कटॉप व्यू (Automatic Translation)
 destination=मंज़िल (Automatic Translation)
 destination-address=गंतव्य पता
 destination-directory=गंतव्य निर्देशिका
+destination-field=Destination Field (Automatic Copy)
 destination-name=गंतव्य नाम (Automatic Translation)
 destination-page=डेस्टिनेशन पेज (Automatic Translation)
 destination-page-help=खोज परिणाम प्रदर्शन पृष्ठ का अनुकूल यूआरएल सेट करें (जैसे "/खोज")। (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=स्रोत पता
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=स्रोत फ़ाइल (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=स्रोत का नाम (Automatic Translation)
 source-selection=स्रोत चयन (Automatic Translation)
 source-url=स्रोत यूआरएल
