--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -4811,6 +4811,7 @@ desktop-view=Prikaz radne površine
 destination=Destination (Automatic Copy)
 destination-address=Odredišna adresa
 destination-directory=Odredišni direktorij
+destination-field=Destination Field (Automatic Copy)
 destination-name=Destination Name (Automatic Copy)
 destination-page=Destination Page (Automatic Copy)
 destination-page-help=Set the friendly URL of the search results display page (e.g. "/search"). (Automatic Copy)
@@ -14050,6 +14051,7 @@ source-address=Adresa izvornika
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Source File (Automatic Copy)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Source Name (Automatic Copy)
 source-selection=Source Selection (Automatic Copy)
 source-url=Izvorni URL
