--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -4811,6 +4811,7 @@ desktop-view=Asztali nézet
 destination=Cél
 destination-address=Cél címe
 destination-directory=Célkönyvtár
+destination-field=Destination Field (Automatic Copy)
 destination-name=Cél neve
 destination-page=Céloldal
 destination-page-help=Állítsa be a keresési eredmények megjelenítőoldalának barátságos URL-címét (pl. "/kereses").
@@ -14053,6 +14054,7 @@ source-address=Forráscím
 source-code=Forráskód
 source-code-url=Forráskód URL-címe
 source-file=Forrásfájl
+source-file-field=Source File Field (Automatic Copy)
 source-name=Forrásnév
 source-selection=Forrás kiválasztása
 source-url=Forrás URL
