--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -4811,6 +4811,7 @@ desktop-view=Tampilan Desktop (Automatic Translation)
 destination=tujuan (Automatic Translation)
 destination-address=Alamat Tujuan
 destination-directory=Tujuan Direktori
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nama Tujuan (Automatic Translation)
 destination-page=Halaman Tujuan (Automatic Translation)
 destination-page-help=Atur URL yang ramah dari halaman tampilan hasil pencarian (misalnya "/cari"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Alamat Source
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Berkas Sumber (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nama Sumber (Automatic Translation)
 source-selection=Pemilihan Sumber (Automatic Translation)
 source-url=Sumber URL
