--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -4810,6 +4810,7 @@ desktop-view=Visualizzazione Desktop
 destination=destinazione (Automatic Translation)
 destination-address=Indirizzo di Destinazione
 destination-directory=Cartella di Destinazione
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nome destinazione (Automatic Translation)
 destination-page=Pagina destinazione (Automatic Translation)
 destination-page-help=Impostare l'URL descrittivo della pagina di visualizzazione dei risultati della ricerca (ad esempio "/search"). (Automatic Translation)
@@ -14051,6 +14052,7 @@ source-address=Indirizzo di Origine
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=File di origine (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nome origine (Automatic Translation)
 source-selection=Selezione origine (Automatic Translation)
 source-url=URL di Origine
