--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -4811,6 +4811,7 @@ desktop-view=תצוגת שולחן עבודה
 destination=יעד (Automatic Translation)
 destination-address=כתובת יעד
 destination-directory=ספריית יעד
+destination-field=Destination Field (Automatic Copy)
 destination-name=שם יעד
 destination-page=עמוד היעד
 destination-page-help=הגדר את כתובת ה- URL הידידותית של דף התצוגה של תוצאות החיפוש (למשל "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=כתובת המקור
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=קובץ מקור (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=שם המקור
 source-selection=בחירת מקור (Automatic Translation)
 source-url=כתובת אינטרנט של המקור
