--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -4811,6 +4811,7 @@ desktop-view=デスクトップビュー
 destination=宛先
 destination-address=目的地
 destination-directory=目的先のディレクトリ
+destination-field=Destination Field (Automatic Copy)
 destination-name=宛先名
 destination-page=対象ページ
 destination-page-help=検索結果表示ページの分かりやすいURLを設定してください（例："/search"）。
@@ -14052,6 +14053,7 @@ source-address=送信元アドレス
 source-code=ソースコード
 source-code-url=ソースコード URL
 source-file=ソースファイル
+source-file-field=Source File Field (Automatic Copy)
 source-name=ソース名
 source-selection=ソースの選択
 source-url=取り込み先のURL
