--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -4811,6 +4811,7 @@ desktop-view=데스크톱 보기 (Automatic Translation)
 destination=목적지 (Automatic Translation)
 destination-address=목적지 주소
 destination-directory=수신지 디렉토리
+destination-field=Destination Field (Automatic Copy)
 destination-name=대상 이름 (Automatic Translation)
 destination-page=대상 페이지 (Automatic Translation)
 destination-page-help=검색 결과 표시 페이지의 친숙한 URL을 설정합니다(예: "/검색"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=소스 애드레스
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=소스 파일 (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=소스 이름 (Automatic Translation)
 source-selection=소스 선택 (Automatic Translation)
 source-url=근원URL
