--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -4811,6 +4811,7 @@ desktop-view=Pandangan (Automatic Translation)
 destination=Destinasi (Automatic Translation)
 destination-address=Alamat Destinasi (Automatic Translation)
 destination-directory=Direktori Destinasi (Automatic Translation)
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nama Destinasi (Automatic Translation)
 destination-page=Laman Destinasi (Automatic Translation)
 destination-page-help=Tetapkan URL mesra halaman paparan hasil carian (cth. "/carian"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Alamat Sumber (Automatic Translation)
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Fail Sumber (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nama Sumber (Automatic Translation)
 source-selection=Pemilihan Sumber (Automatic Translation)
 source-url=URL sumber (Automatic Translation)
