--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -4811,6 +4811,7 @@ desktop-view=Skrivebordsvisning
 destination=destinasjon (Automatic Translation)
 destination-address=Mottakeradresse
 destination-directory=Målkatalog
+destination-field=Destination Field (Automatic Copy)
 destination-name=Navn på mål (Automatic Translation)
 destination-page=Målside (Automatic Translation)
 destination-page-help=Angi den egendefinerte URL-adressen til visningssiden for søkeresultatene (f.eks. (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Kartadresse
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Kildefil (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Navn på kilde (Automatic Translation)
 source-selection=Valg av kilde (Automatic Translation)
 source-url=Kilde URL
