--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -4811,6 +4811,7 @@ desktop-view=Bureaubladweergave
 destination=Doel
 destination-address=Doeladres
 destination-directory=Doeldirectory
+destination-field=Destination Field (Automatic Copy)
 destination-name=Naam bestemming
 destination-page=Doelpagina
 destination-page-help=Stel de beschrijvende URL van de pagina met zoekresultaten in (bijv. "/search").
@@ -14053,6 +14054,7 @@ source-address=Bronadres
 source-code=Broncode
 source-code-url=URL broncode
 source-file=Bronbestand
+source-file-field=Source File Field (Automatic Copy)
 source-name=Bronnaam
 source-selection=Bronselectie
 source-url=Bron-URL
