--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -4811,6 +4811,7 @@ desktop-view=Bureaubladweergave
 destination=Destination (Automatic Copy)
 destination-address=Destination Addres
 destination-directory=Doelmap
+destination-field=Destination Field (Automatic Copy)
 destination-name=Destination Name (Automatic Copy)
 destination-page=Destination Page (Automatic Copy)
 destination-page-help=Set the friendly URL of the search results display page (e.g. "/search"). (Automatic Copy)
@@ -14053,6 +14054,7 @@ source-address=Bronadres
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Source File (Automatic Copy)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Source Name (Automatic Copy)
 source-selection=Source Selection (Automatic Copy)
 source-url=Bron URL
