--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -4811,6 +4811,7 @@ desktop-view=Visão da área de trabalho
 destination=Destino
 destination-address=Endereço destino
 destination-directory=Diretório destino
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nome de destino
 destination-page=Página de destino
 destination-page-help=Defina a URL amigável da página de exibição de resultados de busca (por ex., "/search").
@@ -14050,6 +14051,7 @@ source-address=Endereço da fonte
 source-code=Código fonte
 source-code-url=URL de código fonte
 source-file=Arquivo fonte
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nome da Fonte
 source-selection=Seleção de fonte
 source-url=URL da fonte
