--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -4811,6 +4811,7 @@ desktop-view=Visualização de ambiente de trabalho
 destination=destino (Automatic Translation)
 destination-address=Endereço de destino
 destination-directory=Directoria de destino
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nome do destino (Automatic Translation)
 destination-page=Página de destino (Automatic Translation)
 destination-page-help=Defina a URL amigável da página de exibição de resultados de pesquisa (por exemplo, "/pesquisa"). (Automatic Translation)
@@ -14052,6 +14053,7 @@ source-address=Endereço da Fonte
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Arquivo de origem (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nome de origem (Automatic Translation)
 source-selection=Seleção de Origem (Automatic Translation)
 source-url=URL da Fonte
