--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -4811,6 +4811,7 @@ desktop-view=Vizualizare desktop (Automatic Translation)
 destination=destinație (Automatic Translation)
 destination-address=Adresa Destinatie
 destination-directory=Destinație Director
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nume destinație (Automatic Translation)
 destination-page=Pagină destinație (Automatic Translation)
 destination-page-help=Setați adresa URL prietenoasă a paginii de afișare a rezultatelor căutării (de exemplu, "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Adresa Sursa
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Fișier sursă (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nume sursă (Automatic Translation)
 source-selection=Selectare sursă (Automatic Translation)
 source-url=URL Sursa
