--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -4811,6 +4811,7 @@ desktop-view=Вид рабочего стола
 destination=назначение (Automatic Translation)
 destination-address=Адрес назначения
 destination-directory=Целевая папка
+destination-field=Destination Field (Automatic Copy)
 destination-name=Название назначения (Automatic Translation)
 destination-page=Страница назначения (Automatic Translation)
 destination-page-help=Установите дружественный URL страницы отображения результатов поиска (например, "/поиск"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Исходный адрес
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=исходный файл (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Имя источника (Automatic Translation)
 source-selection=Выбор источника (Automatic Translation)
 source-url=URL исходник
