--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -4811,6 +4811,7 @@ desktop-view=Pohľad pracovnej plochy
 destination=cieľ (Automatic Translation)
 destination-address=Cieľová adresa
 destination-directory=Cieľový adresár
+destination-field=Destination Field (Automatic Copy)
 destination-name=Názov cieľa (Automatic Translation)
 destination-page=Cieľová stránka (Automatic Translation)
 destination-page-help=Nastavte priateľskú adresu URL zobrazenej stránky s výsledkami vyhľadávania (napr. (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Zdrojová adresa
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Zdrojový súbor (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Názov zdroja (Automatic Translation)
 source-selection=Výber zdroja (Automatic Translation)
 source-url=Zdrojová URL
