--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -4811,6 +4811,7 @@ desktop-view=Pogled namizja (Automatic Translation)
 destination=cilj (Automatic Translation)
 destination-address=Ciljni naslov
 destination-directory=Ciljni imenik
+destination-field=Destination Field (Automatic Copy)
 destination-name=Ime cilja (Automatic Translation)
 destination-page=Ciljna stran (Automatic Translation)
 destination-page-help=Nastavite prijazen URL strani za prikaz rezultatov iskanja (npr. »/iskanje«). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Naslov izvorne kode
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Izvorna datoteka (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Ime vira (Automatic Translation)
 source-selection=Izbira vira (Automatic Translation)
 source-url=URL vira
