--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -4811,6 +4811,7 @@ desktop-view=Skrivbordsvy
 destination=Destination
 destination-address=Mottagaradress
 destination-directory=Målkatalog
+destination-field=Destination Field (Automatic Copy)
 destination-name=Destinationsnamn
 destination-page=Destinationssida
 destination-page-help=Ange läsvänlig URL för sökresultatens visningssida (t.ex. "/sök").
@@ -14050,6 +14051,7 @@ source-address=Kartadress
 source-code=Källkod
 source-code-url=URL för källkod
 source-file=Källfil
+source-file-field=Source File Field (Automatic Copy)
 source-name=Källnamn
 source-selection=Källval
 source-url=Käll-URL
