--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -4811,6 +4811,7 @@ desktop-view=திரைப்பலகக் காட்சி
 destination=Destination (Automatic Copy)
 destination-address=இலக்கு முகவரி
 destination-directory=இலக்கு கோப்பகம்
+destination-field=Destination Field (Automatic Copy)
 destination-name=இலக்கின் பெயர்
 destination-page=இலக்கின் பெயர்
 destination-page-help=Set the friendly URL of the search results display page (e.g. "/search"). (Automatic Copy)
@@ -14050,6 +14051,7 @@ source-address=மூல முகவரி
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Source File (Automatic Copy)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Source Name (Automatic Copy)
 source-selection=Source Selection (Automatic Copy)
 source-url=மூல URL
