--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -4811,6 +4811,7 @@ desktop-view=มุมมองเดสก์ท็อป (Automatic Translatio
 destination=จุดหมาย (Automatic Translation)
 destination-address=ที่อยู่ปลายทาง (Automatic Translation)
 destination-directory=ไดเรกทอรีปลายทาง (Automatic Translation)
+destination-field=Destination Field (Automatic Copy)
 destination-name=ชื่อปลายทาง (Automatic Translation)
 destination-page=เพจปลายทาง (Automatic Translation)
 destination-page-help=ตั้งค่า URL ที่จําง่ายของหน้าแสดงผลการค้นหา (เช่น "/search") (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=ที่อยู่ต้นทาง (Automatic Translation)
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=แฟ้มต้นฉบับ (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=ชื่อแหล่งที่มา (Automatic Translation)
 source-selection=การเลือกแหล่งข้อมูล (Automatic Translation)
 source-url=URL ต้นทาง (Automatic Translation)
