--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -4811,6 +4811,7 @@ desktop-view=Masaüstü Görünümü (Automatic Translation)
 destination=hedef (Automatic Translation)
 destination-address=Hedef Adres
 destination-directory=Hedef Dizin
+destination-field=Destination Field (Automatic Copy)
 destination-name=Hedef Adı (Automatic Translation)
 destination-page=Hedef Sayfa (Automatic Translation)
 destination-page-help=Arama sonuçları görüntüleme sayfasının kolay URL'sini ayarlayın (ör. "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Kaynak Adresi
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Kaynak Dosya (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Kaynak Adı (Automatic Translation)
 source-selection=Kaynak Seçimi (Automatic Translation)
 source-url=Kaynak URL
