--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -4811,6 +4811,7 @@ desktop-view=Подання робочого стола (Automatic Translation)
 destination=Призначення (Automatic Translation)
 destination-address=Адреса призначення
 destination-directory=Цільова тека
+destination-field=Destination Field (Automatic Copy)
 destination-name=Ім'я призначення (Automatic Translation)
 destination-page=Сторінка призначення (Automatic Translation)
 destination-page-help=Встановіть зрозумілу URL-адресу відображуваної сторінки результатів пошуку (наприклад, "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Початкова адреса
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Вихідний файл (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Ім'я джерела (Automatic Translation)
 source-selection=Вибір джерела (Automatic Translation)
 source-url=URL джерела
