--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -4811,6 +4811,7 @@ desktop-view=桌面视图
 destination=目标
 destination-address=目标地址
 destination-directory=目标目录
+destination-field=Destination Field (Automatic Copy)
 destination-name=目的名称
 destination-page=目标页面
 destination-page-help=设置搜索结果显示页的友好 URL（例如"/search"）。
@@ -14052,6 +14053,7 @@ source-address=源地址
 source-code=源代码
 source-code-url=源代码 URL
 source-file=源文件
+source-file-field=Source File Field (Automatic Copy)
 source-name=源名称
 source-selection=源选择
 source-url=源URL
