--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -4811,6 +4811,7 @@ desktop-view=桌面檢視
 destination=目標
 destination-address=目標位址
 destination-directory=目標目錄
+destination-field=Destination Field (Automatic Copy)
 destination-name=目的名稱
 destination-page=目標頁面
 destination-page-help=設置搜索結果顯示頁面的友好URL（例如"/搜索"）。 (Automatic Translation)
@@ -14051,6 +14052,7 @@ source-address=來源位址
 source-code=原始碼
 source-code-url=原始碼 URL
 source-file=來源檔案
+source-file-field=Source File Field (Automatic Copy)
 source-name=來源名稱
 source-selection=來源選擇
 source-url=來源網址
