--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -4811,6 +4811,7 @@ desktop-view=Vista de escritorio
 destination=Destino
 destination-address=Dirección de destino
 destination-directory=Directorio de destino
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nombre de destino
 destination-page=Página de destino
 destination-page-help=Especifique la URL descriptiva de la página de visualización de los resultados de búsqueda (por ejemplo, «/buscar»).
@@ -14052,6 +14053,7 @@ source-address=Dirección del origen
 source-code=Código fuente
 source-code-url=URL de código fuente
 source-file=Archivo de origen
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nombre de origen
 source-selection=Selección de origen
 source-url=URL origen
