--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -4811,6 +4811,7 @@ desktop-view=Vue Bureau
 destination=Destination
 destination-address=Adresse du destinataire
 destination-directory=Annuaire de destination
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nom de la destination
 destination-page=Page de destination
 destination-page-help=Définissez l'URL conviviale de la page d'affichage des résultats de la recherche (par exemple, "/search").
@@ -14052,6 +14053,7 @@ source-address=Adresse De la Source
 source-code=Code source
 source-code-url=URL de code source
 source-file=Fichier source
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nom de la source
 source-selection=Sélection de la source
 source-url=URL Source
