--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -4811,6 +4811,7 @@ desktop-view=Darbalaukio rodinys (Automatic Translation)
 destination=Paskirties (Automatic Translation)
 destination-address=Paskirties adresas (Automatic Translation)
 destination-directory=Paskirties katalogas (Automatic Translation)
+destination-field=Destination Field (Automatic Copy)
 destination-name=Paskirties vietos pavadinimas (Automatic Translation)
 destination-page=Paskirties puslapis (Automatic Translation)
 destination-page-help=Nustatykite patogų paieškos rezultatų rodymo puslapio URL (pvz., "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Šaltinio adresas (Automatic Translation)
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Šaltinio failas (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Šaltinio pavadinimas (Automatic Translation)
 source-selection=Šaltinio pasirinkimas (Automatic Translation)
 source-url=Šaltinio URL (Automatic Translation)
