--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -4811,6 +4811,7 @@ desktop-view=Widok pulpitu
 destination=Docelowy (Automatic Translation)
 destination-address=Adres docelowy
 destination-directory=Folder docelowy
+destination-field=Destination Field (Automatic Copy)
 destination-name=Nazwa miejsca docelowego (Automatic Translation)
 destination-page=Strona docelowa (Automatic Translation)
 destination-page-help=Ustaw przyjazny adres URL strony wyświetlania wyników wyszukiwania (np. (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Adres źródłowy
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Plik źródłowy (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Nazwa źródła (Automatic Translation)
 source-selection=Wybór źródła (Automatic Translation)
 source-url=Źródłowy URL
