--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -4811,6 +4811,7 @@ desktop-view=Xem kiểu màn hình rộng
 destination=Đích (Automatic Translation)
 destination-address=Địa chỉ đích
 destination-directory=Thư mục đến
+destination-field=Destination Field (Automatic Copy)
 destination-name=Tên Đích (Automatic Translation)
 destination-page=Trang Đích (Automatic Translation)
 destination-page-help=Đặt URL thân thiện của trang hiển thị kết quả tìm kiếm (ví dụ: "/search"). (Automatic Translation)
@@ -14050,6 +14051,7 @@ source-address=Địa chỉ nguồn
 source-code=Source Code (Automatic Copy)
 source-code-url=Source Code URL (Automatic Copy)
 source-file=Tệp Nguồn (Automatic Translation)
+source-file-field=Source File Field (Automatic Copy)
 source-name=Tên Nguồn (Automatic Translation)
 source-selection=Lựa chọn Nguồn (Automatic Translation)
 source-url=URL Nguồn
